## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
## GNU General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with M2-Planet.  If not, see <http://www.gnu.org/licenses/>.

* Current
** Added
Added port to Knight-Native
Ported 4/24 working tests for AMD64

** Changed

** Fixed
Corrected Global char* to behave correctly when given a static string
Ensured pointers match register size

** Removed

* 1.2 - 2019-04-14
** Added
Added 24/24 working tests for armv7l
Port to ARMv7l and ARMv6l both work

** Changed
ELF-code segment now writable for ARMv7l without debug
Updated from mescc-tools from 0.5.2 to 0.6 (with changes in checksums due to alternate null padding)

** Fixed
Fixed unsigned division in ARMv7l port
Fixed non-uniform behavior across locales and *BSDs
Fixed broken stack in ARMv7l thanks to dddddd

** Removed

* 1.1 - 2019-03-09
** Added
Added support for \f, \v and \e
Added refresh to bootstrap.sh to build seed from cc_x86.s
Added missing license headers
Added support for ~expressions
Added prototype for Slow_Lisp build test
Added Custom type for mes.h
Added support for octal and binary numbers
Added support for \0
Added support for GET_MACHINE_FLAGS in tests
Added --architecture flag
Added 24/24 working tests for knight-posix
Added working HEAP/malloc to knight-posix

** Changed
Converted M2-Planet to use GNU style error message
Seed.M1 when built will now have the same checksum as M2-Planet self-hosted
Harmonized license headers
Updated M1 to current version
Updated hex2 to current version
Updated get_machine to current version
Updated to mescc-tools 0.6.0 syntax
Changed default architecture to knight-native
Moved x86 specific exit.c and putchar.c to test/common_x86/functions
Relocated x86 specific libc.M1 to test/common_x86
Formalized Knight-posix execve standard
Relocated x86 specific file.c to test/common_x86/functions

** Fixed
Fixed typo in file headers